--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <div class="banner-text text-center fade-in-up">
         <div class="h2">
           
-            <span id="subtitle" data-typed-text="生命中所有的遇见,都是礼物"></span>
+            <span id="subtitle" data-typed-text="生命中所有的遇见，都是礼物"></span>
           
         </div>
 
